unpackaged/main/default/objects/PricebookEntry/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <label>Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Regular</fullName>
                <default>true</default>
                <label>Regular</label>
            </value>
            <value>
                <fullName>Contractor</fullName>
                <isActive>false</isActive>
                <label>Contractor</label>
            </value>
            <value>
                <fullName>Special</fullName>
                <isActive>false</isActive>
                <label>Special</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>