unpackaged/main/default/objects/PricebookEntry/fields/Contractor_Price__c.field-meta.xml
<CustomField>
    <fullName>Contractor_Price__c</fullName>
    <inlineHelpText>This price is applicable when Commercial Business is checked for an Account</inlineHelpText>
    <label>Contractor Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>