unpackaged/main/default/objects/PricebookEntry/fields/Pricebook_Entry_ID__c.field-meta.xml
<CustomField>
    <fullName>Pricebook_Entry_ID__c</fullName>
    <formula>CASESAFEID(Id)</formula>
    <inlineHelpText>case safe id copy to make available in standard reports</inlineHelpText>
    <label>Pricebook Entry ID</label>
    <type>Text</type>
</CustomField>