unpackaged/main/default/objects/PricebookEntry/fields/Product_related_message__c.field-meta.xml
<CustomField>
    <fullName>Product_related_message__c</fullName>
    <label>Product related message</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>