unpackaged/main/default/objects/PricebookEntry/fields/Use_Msg_instead_of_Price__c.field-meta.xml
<CustomField>
    <fullName>Use_Msg_instead_of_Price__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Use Msg instead of Price</label>
    <type>Checkbox</type>
</CustomField>