unpackaged/main/default/objects/PricebookEntry/fields/X2_Discount_Level__c.field-meta.xml
<CustomField>
    <fullName>X2_Discount_Level__c</fullName>
    <label>2 Discount Level</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>