unpackaged/main/default/objects/PricebookEntry/fields/X2_Quantity_Discount__c.field-meta.xml
<CustomField>
    <fullName>X2_Quantity_Discount__c</fullName>
    <label>2 Quantity Discount</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>